# django-bouncy

./: pyproject.toml  requirements.txt
django_bouncy/: signals.py
