[project]
name = "django-bouncy"
version = "1.0.0"
readme = "README.md"
description = "Wonde Python Api implementation."
dependencies = [
  "Django==3.2.7",
  "nose",
  "django-nose",
  "coverage",
  "mock",
  "pyopenssl==17.3.0",
  "pem>=16.0.0",
  "python-dateutil"]
keywords=["django-bouncy"]
requires-python = ">= 3.9"
authors = [{name = "PrimarySite"}]
maintainers = [{name="PrimarySite"}]
classifiers=[
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
]

[project.urls]
Homepage="https://github.com/PrimarySite/django-bouncy"
